# tiz

./: .env.example  .gitignore  BACKEND_DEV.md  CLAUDE.md  PLAN.md  README.md  api.json  build.gradle.kts  settings.gradle.kts  skills-lock.json  svc-all.sh  z.sh
.github/: dependabot.yml
authsrv/: .env.example  .gitignore  .nexdeck.yml  CLAUDE.md  Dockerfile  PLAN.md  README.md  build.gradle.kts  gradle.properties  run.sh  settings.gradle.kts  z.sh
deploy/: deploy.sh  docker-compose.yml
gatewaysrv/: .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.gradle.kts  run.sh  settings.gradle.kts
gradle/: libs.versions.toml
infra/: .gitignore  CLAUDE.md  README.md  dev-infra.sh  docker-compose-app.yml  docker-compose-lite.yml  docker-compose.yml  infra.sh  nacos-config-import.sh
llmsrv/: Dockerfile  README.md  pixi.toml
standards/: api.md  (+3 more)
tiz-backend/llm-service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  extract_deps.py  pixi.toml  pyproject.toml  requirements.txt  svc.sh
tiz-backend/llm-service/app/: config.py  main.py  nacos_client.py  state.py
tiz-backend/llm-service/app/graphs/: chat_graph.py  generate_graph.py  grade_graph.py
tiz-backend/llm-service/app/llm/: client.py
tiz-backend/llm-service/app/models/: __init__.py  ai_config.py  chat.py  grade.py  question.py
tiz-backend/llm-service/app/nodes/: __init__.py  analyze.py  extract.py  generate.py
tiz-backend/llm-service/app/utils/: __init__.py
tiz-backend/llm-service/tests/: conftest.py  test_chat.py  test_generate.py  test_main.py
(+1467 files in other folders)
